# pygmt_helper

./: ReadMe.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deptry.yml  numpydoc.yml  publish-PyPI.yml  pytest.yml
pygmt_helper/: plots.py  plotting.py
pygmt_helper/examples/: ds_sources.py  event_stations.py  fault_traces.py  polygons.py  ratio.py  srf.py
pygmt_helper/examples/resources/: cybershake_v20p4_200.csv  non_uniform_whole_nz_with_real_stations-hh400_v20p3_land.ll  val_small.csv
tests/: test_plotting.py
