[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pygmt_helper"
version = "22.8.1"
authors = [{name = "QuakeCoRE"}]
description = "PyGMT helper package"
readme = "ReadMe.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
